fix typos inside docs/python/notebooks

--- a/docs/python/notebooks/onnx-inference-byoc-gpu-cpu-aks.ipynb
+++ b/docs/python/notebooks/onnx-inference-byoc-gpu-cpu-aks.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deploy_with_cpu = False"
+    "deploy_with_cpu = False\n"
    ]
   },
   {
@@ -64,13 +64,13 @@
     "If you are using an Azure Machine Learning Notebook VM, you are all set. Otherwise, please follow the [Azure ML configuration notebook](https://github.com/Azure/MachineLearningNotebooks/blob/master/configuration.ipynb) to set up your environment.\n",
     "\n",
     "### Install additional packages needed for this Notebook\n",
-    "You need to install the popular plotting library matplotlib, the image manipulation library opencv, and the onnx library in the conda environment where Azure Maching Learning SDK is installed.\n",
+    "You need to install the popular plotting library matplotlib, the image manipulation library opencv, and the onnx library in the conda environment where Azure Machine Learning SDK is installed.\n",
     "\n",
     "```\n",
     "(myenv) $ pip install matplotlib onnx opencv-python\n",
     "```\n",
     "\n",
-    "**Debugging tip**: Make sure that to activate your virtual environment (myenv) before you re-launch this notebook using the jupyter notebook comand. Choose the respective Python kernel for your new virtual environment using the Kernel > Change Kernel menu above. If you have completed the steps correctly, the upper right corner of your screen should state Python [conda env:myenv] instead of Python [default]."
+    "**Debugging tip**: Make sure that to activate your virtual environment (myenv) before you re-launch this notebook using the jupyter notebook command. Choose the respective Python kernel for your new virtual environment using the Kernel > Change Kernel menu above. If you have completed the steps correctly, the upper right corner of your screen should state Python [conda env:myenv] instead of Python [default]."
    ]
   },
   {
@@ -79,7 +79,7 @@
    "source": [
     "## 1. Obtain a model from the ONNX Model Zoo\n",
     "\n",
-    "For more information on the Facial Emotion Recognition (FER+) model, you can explore the notebook explaning how to deploy [FER+ with ONNX Runtime on an ACI Instance](onnx-inference-facial-expression-recognition-deploy.ipynb)."
+    "For more information on the Facial Emotion Recognition (FER+) model, you can explore the notebook explaining how to deploy [FER+ with ONNX Runtime on an ACI Instance](onnx-inference-facial-expression-recognition-deploy.ipynb)."
    ]
   },
   {
@@ -99,12 +99,12 @@
     "\n",
     "urllib.request.urlretrieve(onnx_model_url, filename=\"emotion_ferplus.tar.gz\")\n",
     "\n",
-    "# the ! magic command tells our jupyter notebook kernel to run the following line of \n",
+    "# the ! magic command tells our jupyter notebook kernel to run the following line of\n",
     "# code from the command line instead of the notebook kernel\n",
     "\n",
     "# We use tar and xvcf to unzip the files we just retrieved from the ONNX model zoo\n",
     "\n",
-    "!tar xvzf emotion_ferplus.tar.gz"
+    "!tar xvzf emotion_ferplus.tar.gz\n"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "# Check core SDK version number\n",
     "import azureml.core\n",
     "\n",
-    "print(\"SDK version:\", azureml.core.VERSION)"
+    "print(\"SDK version:\", azureml.core.VERSION)\n"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "# read existing workspace from config.json\n",
     "ws = Workspace.from_config()\n",
     "\n",
-    "print(ws.name, ws.location, ws.resource_group, sep = '\\n')"
+    "print(ws.name, ws.location, ws.resource_group, sep = '\\n')\n"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "source": [
     "model_dir = \"emotion_ferplus\" # replace this with the location of your model files\n",
     "\n",
-    "# leave as is if it's in the same folder as this notebook"
+    "# leave as is if it's in the same folder as this notebook\n"
    ]
   },
   {
@@ -178,7 +178,7 @@
     "                       workspace = ws)\n",
     "\n",
     "# Alternative: uncomment the line below and point to the model file in the workspace's model registry\n",
-    "# model = Model(name=\"onnx_emotion\", workspace=ws)"
+    "# model = Model(name=\"onnx_emotion\", workspace=ws)\n"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "source": [
     "models = ws.models\n",
     "for name, m in models.items():\n",
-    "    print(\"Name:\", name,\"\\tVersion:\", m.version, \"\\tDescription:\", m.description, m.tags)"
+    "    print(\"Name:\", name,\"\\tVersion:\", m.version, \"\\tDescription:\", m.description, m.tags)\n"
    ]
   },
   {
@@ -237,42 +237,42 @@
     "def init():\n",
     "    global session, input_name, output_name\n",
     "    model = Model.get_model_path(model_name = 'onnx_emotion')\n",
-    "    \n",
-    "    # Load the model in onnx runtime to start the session    \n",
+    "\n",
+    "    # Load the model in onnx runtime to start the session\n",
     "    session = onnxruntime.InferenceSession(model, None)\n",
     "    input_name = session.get_inputs()[0].name\n",
-    "    output_name = session.get_outputs()[0].name \n",
-    "    \n",
+    "    output_name = session.get_outputs()[0].name\n",
+    "\n",
     "def run(input_data):\n",
     "    '''Purpose: evaluate test input in Azure Cloud using onnxruntime.\n",
-    "        We will call the run function later from our Jupyter Notebook \n",
+    "        We will call the run function later from our Jupyter Notebook\n",
     "        so our azure service can evaluate our model input in the cloud. '''\n",
     "\n",
     "    try:\n",
     "        # load in our data, convert to readable format\n",
     "        data = np.array(json.loads(input_data)['data']).astype('float32')\n",
-    "        \n",
+    "\n",
     "        # pass input data to do model inference with ONNX Runtime\n",
     "        start = time.time()\n",
     "        r = session.run([output_name], {input_name : data})\n",
     "        end = time.time()\n",
-    "        \n",
+    "\n",
     "        result = emotion_map(postprocess(r[0]))\n",
-    "        \n",
+    "\n",
     "        result_dict = {\"result\": result,\n",
     "                      \"time_in_sec\": [end - start]}\n",
     "    except Exception as e:\n",
     "        result_dict = {\"error\": str(e)}\n",
-    "    \n",
+    "\n",
     "    return json.dumps(result_dict)\n",
     "\n",
     "def emotion_map(classes, N=1):\n",
-    "    \"\"\"Take the most probable labels (output of postprocess) and returns the \n",
+    "    \"\"\"Take the most probable labels (output of postprocess) and returns the\n",
     "    top N emotional labels that fit the picture.\"\"\"\n",
-    "    \n",
-    "    emotion_table = {'neutral':0, 'happiness':1, 'surprise':2, 'sadness':3, \n",
+    "\n",
+    "    emotion_table = {'neutral':0, 'happiness':1, 'surprise':2, 'sadness':3,\n",
     "                     'anger':4, 'disgust':5, 'fear':6, 'contempt':7}\n",
-    "    \n",
+    "\n",
     "    emotion_keys = list(emotion_table.keys())\n",
     "    emotions = []\n",
     "    for i in range(N):\n",
@@ -286,12 +286,12 @@
     "    return e_x / e_x.sum(axis=0)\n",
     "\n",
     "def postprocess(scores):\n",
-    "    \"\"\"This function takes the scores generated by the network and \n",
+    "    \"\"\"This function takes the scores generated by the network and\n",
     "    returns the class IDs in decreasing order of probability.\"\"\"\n",
     "    prob = softmax(scores)\n",
     "    prob = np.squeeze(prob)\n",
     "    classes = np.argsort(prob)[::-1]\n",
-    "    return classes"
+    "    return classes\n"
    ]
   },
   {
@@ -307,12 +307,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core.conda_dependencies import CondaDependencies \n",
+    "from azureml.core.conda_dependencies import CondaDependencies\n",
     "\n",
     "myenv = CondaDependencies.create(pip_packages=[\"numpy\", \"azureml-core\"])\n",
     "\n",
     "with open(\"myenv.yml\",\"w\") as f:\n",
-    "    f.write(myenv.serialize_to_string())"
+    "    f.write(myenv.serialize_to_string())\n"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "# Alternative: Re-use an image that you have already built from the workspace image registry\n",
     "# gpu_image = ContainerImage(name = \"onnximage.trt\", workspace = ws)\n",
     "\n",
-    "gpu_image.wait_for_creation(show_output = True)"
+    "gpu_image.wait_for_creation(show_output = True)\n"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(gpu_image.image_build_log_uri)"
+    "print(gpu_image.image_build_log_uri)\n"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "outputs": [],
    "source": [
     "if deploy_with_cpu:\n",
-    "    \n",
+    "\n",
     "    cpu_image_config = ContainerImage.image_configuration(execution_script = \"score.py\",\n",
     "                                                      runtime = \"python\",\n",
     "                                                      conda_file = \"myenv.yml\",\n",
@@ -398,11 +398,11 @@
     "                                      models = [model],\n",
     "                                      image_config = cpu_image_config,\n",
     "                                      workspace = ws)\n",
-    "    \n",
+    "\n",
     "    # Alternative: Re-use an image that you have already built from the workspace image registry\n",
     "    # cpu_image = ContainerImage(name = \"onnximage.cpu\", workspace = ws)\n",
     "\n",
-    "    cpu_image.wait_for_creation(show_output = True)"
+    "    cpu_image.wait_for_creation(show_output = True)\n"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "outputs": [],
    "source": [
     "if deploy_with_cpu:\n",
-    "    print(cpu_image.image_build_log_uri)"
+    "    print(cpu_image.image_build_log_uri)\n"
    ]
   },
   {
@@ -456,8 +456,8 @@
     "    # Create a configuration (can also provide parameters to customize)\n",
     "    prov_config = AksCompute.provisioning_configuration(vm_size='Standard_NC6', location='East US2' )\n",
     "    # Create the cluster\n",
-    "    gpu_aks_target = ComputeTarget.create(workspace = ws, \n",
-    "                                  name = gpu_aks_name, \n",
+    "    gpu_aks_target = ComputeTarget.create(workspace = ws,\n",
+    "                                  name = gpu_aks_name,\n",
     "                                  provisioning_configuration = prov_config)\n"
    ]
   },
@@ -470,7 +470,7 @@
     "%%time\n",
     "gpu_aks_target.wait_for_completion(show_output = True)\n",
     "print(gpu_aks_target.provisioning_state)\n",
-    "print(gpu_aks_target.provisioning_errors)"
+    "print(gpu_aks_target.provisioning_errors)\n"
    ]
   },
   {
@@ -488,8 +488,8 @@
    "source": [
     "# CPU-cell\n",
     "\n",
-    "if deploy_with_cpu: \n",
-    "    \n",
+    "if deploy_with_cpu:\n",
+    "\n",
     "    cpu_aks_name = 'your-cpu-cluster'\n",
     "\n",
     "    try:\n",
@@ -500,13 +500,13 @@
     "        # Create a configuration (can also provide parameters to customize)\n",
     "        prov_config = AksCompute.provisioning_configuration(vm_size='Standard_D3', location='East US2' )\n",
     "        # Create the cluster\n",
-    "        cpu_aks_target = ComputeTarget.create(workspace = ws, \n",
-    "                                      name = cpu_aks_name, \n",
+    "        cpu_aks_target = ComputeTarget.create(workspace = ws,\n",
+    "                                      name = cpu_aks_name,\n",
     "                                      provisioning_configuration = prov_config)\n",
-    "    \n",
+    "\n",
     "    cpu_aks_target.wait_for_completion(show_output = True)\n",
     "    print(cpu_aks_target.provisioning_state)\n",
-    "    print(cpu_aks_target.provisioning_errors)"
+    "    print(cpu_aks_target.provisioning_errors)\n"
    ]
   },
   {
@@ -525,7 +525,7 @@
     "gpu_aks_config = AksWebservice.deploy_configuration()\n",
     "\n",
     "if deploy_with_cpu:\n",
-    "    cpu_aks_config = AksWebservice.deploy_configuration()"
+    "    cpu_aks_config = AksWebservice.deploy_configuration()\n"
    ]
   },
   {
@@ -544,13 +544,13 @@
     "%%time\n",
     "gpu_aks_service_name ='gpu-aks-service'\n",
     "\n",
-    "gpu_aks_service = Webservice.deploy_from_image(workspace = ws, \n",
+    "gpu_aks_service = Webservice.deploy_from_image(workspace = ws,\n",
     "                                           name = gpu_aks_service_name,\n",
     "                                           image = gpu_image,\n",
     "                                           deployment_config = gpu_aks_config,\n",
     "                                           deployment_target = gpu_aks_target)\n",
     "gpu_aks_service.wait_for_deployment(show_output = True)\n",
-    "print(gpu_aks_service.state)"
+    "print(gpu_aks_service.state)\n"
    ]
   },
   {
@@ -562,9 +562,9 @@
     "if gpu_aks_service.state != 'Healthy':\n",
     "    # run this command for debugging.\n",
     "    print(gpu_aks_service.get_logs())\n",
-    "    \n",
+    "\n",
     "    # If your deployment fails, make sure to delete your aci_service before trying again!\n",
-    "    # gpu_aks_service.delete()"
+    "    # gpu_aks_service.delete()\n"
    ]
   },
   {
@@ -585,14 +585,14 @@
     "if deploy_with_cpu:\n",
     "    cpu_aks_service_name ='cpu-aks-service'\n",
     "\n",
-    "    cpu_aks_service = Webservice.deploy_from_image(workspace = ws, \n",
+    "    cpu_aks_service = Webservice.deploy_from_image(workspace = ws,\n",
     "                                               name = cpu_aks_service_name,\n",
     "                                               image = cpu_image,\n",
     "                                               deployment_config = cpu_aks_config,\n",
     "                                               deployment_target = cpu_aks_target)\n",
-    "    \n",
+    "\n",
     "    cpu_aks_service.wait_for_deployment(show_output = True)\n",
-    "    print(cpu_aks_service.state)"
+    "    print(cpu_aks_service.state)\n"
    ]
   },
   {
@@ -602,13 +602,13 @@
    "outputs": [],
    "source": [
     "if deploy_with_cpu:\n",
-    "    \n",
+    "\n",
     "    if cpu_aks_service.state != 'Healthy':\n",
     "        # run this command for debugging.\n",
     "        print(cpu_aks_service.get_logs())\n",
     "\n",
     "        # If your deployment fails, make sure to delete your aks_service before trying again!\n",
-    "        # cpu_aks_service.delete()"
+    "        # cpu_aks_service.delete()\n"
    ]
   },
   {
@@ -640,12 +640,12 @@
    "outputs": [],
    "source": [
     "def emotion_map(classes, N=1):\n",
-    "    \"\"\"Take the most probable labels (output of postprocess) and returns the \n",
+    "    \"\"\"Take the most probable labels (output of postprocess) and returns the\n",
     "    top N emotional labels that fit the picture.\"\"\"\n",
-    "    \n",
-    "    emotion_table = {'neutral':0, 'happiness':1, 'surprise':2, 'sadness':3, \n",
+    "\n",
+    "    emotion_table = {'neutral':0, 'happiness':1, 'surprise':2, 'sadness':3,\n",
     "                     'anger':4, 'disgust':5, 'fear':6, 'contempt':7}\n",
-    "    \n",
+    "\n",
     "    emotion_keys = list(emotion_table.keys())\n",
     "    emotions = []\n",
     "    for i in range(N):\n",
@@ -659,12 +659,12 @@
     "    return e_x / e_x.sum(axis=0)\n",
     "\n",
     "def postprocess(scores):\n",
-    "    \"\"\"This function takes the scores generated by the network and \n",
+    "    \"\"\"This function takes the scores generated by the network and\n",
     "    returns the class IDs in decreasing order of probability.\"\"\"\n",
     "    prob = softmax(scores)\n",
     "    prob = np.squeeze(prob)\n",
     "    classes = np.argsort(prob)[::-1]\n",
-    "    return classes"
+    "    return classes\n"
    ]
   },
   {
@@ -699,10 +699,10 @@
     "    if img.shape == (64, 64):\n",
     "        img.resize((1, 1, 64, 64))\n",
     "        return img\n",
-    "    \n",
+    "\n",
     "    grayscale = rgb2gray(img)\n",
     "    processed_img = resize_img(grayscale)\n",
-    "    return processed_img"
+    "    return processed_img\n"
    ]
   },
   {
@@ -735,7 +735,7 @@
     "    img = preprocess(img)\n",
     "    print(\"New Dimensions: \", img.shape)\n",
     "else:\n",
-    "    img = None"
+    "    img = None\n"
    ]
   },
   {
@@ -753,14 +753,14 @@
     "        r_gpu = json.loads(gpu_aks_service.run(input_data))\n",
     "        gpu_result = r_gpu['result'][0]\n",
     "        gpu_time_ms = np.round(r_gpu['time_in_sec'][0] * 1000, 2)\n",
-    "        \n",
+    "\n",
     "        if deploy_with_cpu:\n",
     "            r_cpu = json.loads(cpu_aks_service.run(input_data))\n",
     "            cpu_result = r_cpu['result'][0]\n",
     "            cpu_time_ms = np.round(r_cpu['time_in_sec'][0] * 1000, 2)\n",
     "        else:\n",
     "            cpu_result, cpu_time_ms = \"\", \"\"\n",
-    "            \n",
+    "\n",
     "    except Exception as e:\n",
     "        print(str(e))\n",
     "\n",
@@ -773,8 +773,7 @@
     "    plt.text(x = 100, y = -40, s = \"          \"+str(gpu_result)+ \"     \"+ str(cpu_result), fontsize = 14)\n",
     "    plt.text(x = 100, y = -25, s = \"          \"+str(gpu_time_ms) + \" ms\" + \"     \" +str(cpu_time_ms)+ \" ms\", fontsize = 14)\n",
     "    plt.text(x = -10, y = -10, s = \"Model Input image: \", fontsize = 14)\n",
-    "    plt.imshow(img.reshape((64, 64)), cmap = plt.cm.gray)    \n",
-    "     "
+    "    plt.imshow(img.reshape((64, 64)), cmap = plt.cm.gray)\n"
    ]
   },
   {
@@ -804,7 +803,7 @@
     "\n",
     "    plt.yticks(x_pos, x)\n",
     "\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
@@ -825,7 +824,7 @@
     "gpu_aks_service.delete()\n",
     "\n",
     "if deploy_with_cpu:\n",
-    "    cpu_aks_service.delete()"
+    "    cpu_aks_service.delete()\n"
    ]
   },
   {
